<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SermonPad</string>
    <string name="app_name_pad">My SermonPad</string>
    <string name="menu_search">Search</string>
    <string name="v_exit">Exit</string>
    <string name="button_ok">OKAY</string>
    <string name="v_protest">Learn More</string>
    <string name="set_show_animation">Don\'t show animation</string>
    <string name="set_show_tutorial">Don\'t show tutorial</string>
    <string name="set_font_size">Sermon Font Size</string>
    <string name="set_sermon_preview">Preview of the sermon text</string>
    <string name="set_settheme">Set Theme: </string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_activity_settings__i">My Settings</string>
    <string name="title_activity_new">Add a New Sermon</string>
    <string name="title_activity_set_app">SermonPad Settings</string>
    <string name="title_activity_settings__ii">Application Mode</string>
    <string name="title">Title : </string>
    <string name="no_title">No Title</string>
    <string name="menu_new">New Sermon</string>
    <string name="menu_helpdesk">The HelpDesk</string>
    <string name="menu_about">About SermonPad</string>
    <string name="menu_share">Share This Sermon</string>
    <string name="menu_view">View this Note</string>
    <string name="menu_copy">Copy this Note</string>
    <string name="menu_edit">Edit this Note</string>
    <string name="menu_delete">Delete this Note</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_help_desk">SermonPad HelpDesk</string>
    <string name="action_settings">SermonPad Settings</string>
    <string name="saf_mobile">+254 711 47 47 87</string>
    <string name="air_mobile">+254 731 97 31 80</string>
    <string name="my_email">jacksiro@outlook.com</string>
    <string name="my_facebook">Facebook: @jaxila</string>
    <string name="my_twitter">Twitter: @jacksonsiro</string>
    <string name="my_instagram">Instagram: @jacksonsiro</string>
    <string name="my_skype">Skype: @jackson.siro</string>
    <string name="help_explanation">If you would like to inquire, complain or recommend on something fell free to contact the developer\'s helpdesk at any time via any of the following channels.</string>
    <string name="title_activity_about">About SermonPad App</string>
    <string name="menu_help">Help Desk</string>
    <string name="about_one">The Virtual SermonBook is an Android Application that was first developed on 26th November, 2014 by Brother Jackson Siro of the Kisii Evening Light Church. The purpose of developing this great application is to provide an alternative sermon book those who have android devices (mobile phones and tablets) in case they need to use the sermon book and it is not within their reach.</string>
    <string name="about_two">A Desktop version for the computers using Windows is available. It can be used in church to project sermons and has a lot of user centered features like changing font size, font types, themes among other features. You can order a copy by emailing the developer jacksiro@outlook.com. Once you get it you can test it for 2 weeks and after which you can pay KES. 1000 or 10 USD to the developer.</string>
    <string name="about_three">A Windows Phone version will be on the Windows Phone store very soon. Others improvements are underway so keep praying for us to advance.</string>
    <string name="win_desktop">Windows Desktop Version</string>
    <string name="future_plans">Future Plans</string>
    <string name="favourite_this">Favourite This Sermon</string>
    <string name="complain_this">Send a Complain</string>
    <string name="live_folder_name">My Sermons</string>
    <string name="live_folder_notes">My Sermons</string>
    <string name="title_edit_title">Sermon title:</string>
    <string name="title_create">New sermon</string>
    <string name="title_edit">Edit: %1$s</string>
    <string name="title_notes_list">Sermons</string>
    <string name="menu_add">New note</string>
    <string name="menu_save">Save</string>
    <string name="menu_open">Open</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_trash">Trash</string>
    <string name="text_title">Title:</string>
    <string name="resolve_edit">Edit sermon</string>
    <string name="resolve_title">Edit title</string>
    <string name="error_title">Error</string>
    <string name="error_message">Error loading sermon</string>
    <string name="nothing_to_save">There is nothing to save</string>
    <string name="via_notes">\n\nVia SermonPad Android App"</string>
    <string name="copy_this">Copy This Sermon</string>
    <string name="edit_this">Edit This Sermon</string>
    <string name="favourites">My Favourites</string>
    <string name="sorry_text">Sorry, this feature will be available in future versions.</string>
    <string name="just_a_min">Just a Minute ...</string>
    <string name="welcome_note">God bless you for taking time to install this great app on your device. This App is free to use, yet without adverts. For any inquiry feel free to call/whatsapp Jack Siro on +254 711 47 47 87 or +254 731 97 31 80 for assistance!</string>
    <string name="proceed_tutorial">Proceed to Tutorial</string>
    <string name="title_activity_sermon_view_raw">SermonViewRaw</string>
    <string name="sermon_content">Sermon Content Here</string>
    <string name="sermon_title">Sermon title here</string>
    <string name="sermon_cont">Sermon Content Here</string>
    <string name="menu_tithes">Tithes</string>

    <string-array name="SetAppList">
        <item>User Preferences</item>
        <item>Display Preferences</item>
        <item>Profile Information</item>
        <item>More Settings</item>
    </string-array>
    <string-array name="SetAppListDesc">
        <item>Personal Preferences</item>
        <item>How the app will displays</item>
        <item>View Your Profile</item>
        <item>Not Available Currently</item>
    </string-array>
	
    <string name="incorrect_pin">Incorrect Pin, scratch your head and try again!</string>
    <string name="very_short_pin">That is a very very Short Pin! Try again with 4 characters</string>
    <string name="preacher_name">Preacher\'s Name</string>
    <string name="place_name">Name of this Place</string>
    <string name="new_note">New Sermon</string>
    <string name="sort_list">Sort List</string>
    <string name="str_date">27/07 2016</string>
    <string name="select_action">Select an Action</string>
    <string name="sortthis_list">Sort List By:</string>
    <string name="date_ascending">Date Ascending Order</string>
    <string name="date_descending">Date Descending Order</string>
    <string name="title_ascending">Title Ascending Order</string>
    <string name="title_descending">Title Descending Order</string>
    <string name="place_ascending">Place Ascending Order</string>
    <string name="place_descending">Place Descending Order</string>
    <string name="preacher_ascending">Preacher Ascending Order</string>
    <string name="preacher_descending">Preacher Descending Order</string>
    <string name="sorting_ascending">Ascending Order</string>
    <string name="sorting_default">Default Order</string>
    <string name="title_activity_trashed">Trashed Sermons</string>
    <string name="hello_world">Hello world!</string>
    <string name="jackson_siro">© Jackson Siro</string>
    <string name="title_tithing">Tithes Monitor</string>
    <string name="menu_cancel">Cancel</string>
    <string name="title_activity_bb_login">Login to Continue</string>
    <string name="please_pin_here">Please Enter your 4 Digit Pin to Continue</string>
    <string name="please_set_pin">Please Set Up a 4-Digit-PIN to use to login in future</string>
    <string name="menu_refresh">Refresh</string>

</resources>
