<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
	
    <item
        android:id="@+id/tithing"
        android:title="@string/menu_tithes"
        android:icon="@drawable/ic_menu_tithe"
        app:showAsAction="always"/>
      
    <item
        android:id="@+id/delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="always"/>
      
    <item
        android:id="@+id/about"
        android:title="@string/menu_about"
        app:showAsAction="never"/>
      
    <item
        android:id="@+id/help"
        android:title="@string/menu_help"
        app:showAsAction="never"/>
    
</menu>
