<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jackson_siro.sermonpad.SongView" >

    <item
        android:id="@+id/savethis"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_done"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/cancel"
        android:title="@string/menu_cancel"
        android:icon="@drawable/ic_action_cancel"
        app:showAsAction="always"/>       

</menu>
