<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/cover" />
		
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center_horizontal"
	        android:orientation="vertical"
	        android:background="#fff"
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/menu_helpdesk"
            android:textAppearance="?android:attr/textAppearanceLarge" />
 		
 		<TextView
 		    android:id="@+id/textView2"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:padding="10dp"
 		    android:text="@string/help_explanation"
 		    android:textAppearance="?android:attr/textAppearanceMedium" />

 		</LinearLayout>
 		
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center_horizontal"
	        android:orientation="vertical"
	        android:background="#fff"
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp" >
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/saf_mobile"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/air_mobile"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/my_email"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        </LinearLayout>
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center_horizontal"
	        android:orientation="vertical"
	        android:background="#fff"
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp" >
        
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/my_facebook"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/my_twitter"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/my_instagram"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/my_skype"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>