<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/cover" />
		
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center_horizontal"
	        android:orientation="vertical"
	        android:background="#fff"
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title_activity_about"
            android:textAppearance="?android:attr/textAppearanceLarge" />
 		
 		<TextView
 		    android:id="@+id/textView2"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:padding="10dp"
 		    android:text="@string/about_one"
 		    android:textAppearance="?android:attr/textAppearanceMedium" />

 		</LinearLayout>
 		
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center_horizontal"
	        android:orientation="vertical"
	        android:background="#fff"
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp" >
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/win_desktop"
            android:textAppearance="?android:attr/textAppearanceLarge" />
 		
 		<TextView
 		    android:id="@+id/textView4"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:padding="10dp"
 		    android:text="@string/about_two"
 		    android:textAppearance="?android:attr/textAppearanceMedium" />

 		</LinearLayout>
 		
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center_horizontal"
	        android:orientation="vertical"
	        android:background="#fff"
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp" >
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/future_plans"
            android:textAppearance="?android:attr/textAppearanceLarge" />
 		
 		<TextView
 		    android:id="@+id/textView6"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:padding="10dp"
 		    android:text="@string/about_three"
 		    android:textAppearance="?android:attr/textAppearanceMedium" />

 		</LinearLayout>
    </LinearLayout>

</ScrollView>